# termagotchi

./: .gitignore  CMakeLists.txt  run.sh
include/: buddy.hpp  buddy_refactor.hpp  render.hpp  sprite_compositor.hpp  sprites.hpp
src/: buddy.cpp  main.cpp  render.cpp  sprite_compositor.cpp
