cmake_minimum_required(VERSION 3.16)
project(termagotchi LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(termagotchi
    src/main.cpp
    src/buddy.cpp
    src/render.cpp
)

target_include_directories(termagotchi PRIVATE include)

if (MSVC)
    target_compile_options(termagotchi PRIVATE /W4)
else()
    target_compile_options(termagotchi PRIVATE -Wall -Wextra -pedantic)
endif()
